<resources>
    <string name="app_name">Matchy_Team_Generator</string>
    <string name="screen_title">Smart Team Generator</string>
    <string name="screen_subtitle">Add students or manage team generation.</string>
    <string name="choose_role">What do you want to do?</string>
    <string name="student_mode">Add Student</string>
    <string name="professor_mode">Professor Dashboard</string>
    <string name="change_role">Go back</string>
    <string name="students_title">Students</string>
    <string name="student_account_title">Add Student</string>
    <string name="generation_title">Generation Settings</string>
    <string name="results_title">Generated Teams</string>
    <string name="student_name">Student name</string>
    <string name="student_email">Student email</string>
    <string name="add_student">Add student</string>
    <string name="save_student_profile">Add student</string>
    <string name="skill_scores">Skill scores from 1 to 5</string>
    <string name="view_all_students">View all students and skills</string>
    <string name="view_all_teams">View all generated teams</string>
    <string name="target_team_size">Target team size</string>
    <string name="sorting_criteria">Sorting criteria</string>
    <string name="strategy">Strategy</string>
    <string name="homogeneous">Homogeneous</string>
    <string name="balanced">Balanced</string>
    <string name="generate_teams">Generate teams</string>
    <string name="delete_all_teams">Delete all teams</string>
    <string name="delete_student">Delete student</string>
    <string name="empty_students">No students added yet.</string>
    <string name="empty_teams">No teams generated yet.</string>
</resources>
